feat(config): draft config

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,21 @@
 cmake_minimum_required(VERSION 3.12)
+project(TLCT LANGUAGES CXX)
 
-project(TSPC-LC)
+set(CMAKE_PROJECT_VERSION_MAJOR 0)
+set(CMAKE_PROJECT_VERSION_MINOR 1)
+set(CMAKE_PROJECT_VERSION_PATCH 0)
+set(CMAKE_PROJECT_VERSION ${CMAKE_PROJECT_VERSION_MAJOR}.${CMAKE_PROJECT_VERSION_MINOR}.${CMAKE_PROJECT_VERSION_PATCH})
 
-add_subdirectory(app)
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
+
+option(BUILD_TESTS "Build tests" FALSE)
+#option(BUILD_SHARED_LIBS "Build shared libraries" FALSE)
+#option(BUILD_WITH_MT "Build libraries as MultiThreaded DLL (Windows Only)" FALSE)
+
+include(cmake/dependencies.cmake)
+
+add_subdirectory(src)
+if (BUILD_TESTS)
+    add_subdirectory(tests)
+endif ()
