--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -6,4 +6,5 @@ function(tlct_add_test name srcs)
     gtest_discover_tests(${name})
 endfunction()
 
-tlct_add_test(test_config "test_config.cpp")
+tlct_add_test(test_tspc_config "test_tspc_config.cpp")
+tlct_add_test(test_raytrix_config "test_raytrix_config.cpp")
