chore(test): add tests for patchsizes For the consequent refactor.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -8,3 +8,4 @@ endfunction()
 
 tlct_add_test(test_tspc_config "test_tspc_config.cpp")
 tlct_add_test(test_raytrix_config "test_raytrix_config.cpp")
+tlct_add_test(test_tspc_patchsizes "test_tspc_patchsizes.cpp")
