feat: support building shared/static lib

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,7 +1,10 @@
 function(tlct_add_test name srcs)
     add_executable(${name} ${srcs})
-    target_include_directories(${name} PRIVATE ${TLCT_INCLUDE_DIR})
-    target_link_libraries(${name} PRIVATE ${TLCT_LINK_LIBS} GTest::gtest_main)
+    target_link_libraries(${name} PRIVATE tlct GTest::gtest_main)
+    if (TLCT_BUILD_SHARED_LIBS AND WIN32)
+        add_custom_command(TARGET ${name} POST_BUILD COMMAND ${CMAKE_COMMAND} -E
+                copy_if_different $<TARGET_RUNTIME_DLLS:${name}> $<TARGET_FILE_DIR:${name}> COMMAND_EXPAND_LISTS)
+    endif ()
     gtest_discover_tests(${name})
 endfunction()
 
