--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,7 @@
-cmake_minimum_required(VERSION 3.12)
+cmake_minimum_required(VERSION 3.21)
+
+include(cmake/polices.cmake)
+
 project(TLCT LANGUAGES CXX)
 
 set(CMAKE_PROJECT_VERSION_MAJOR 0)
@@ -9,9 +12,7 @@ set(CMAKE_PROJECT_VERSION ${CMAKE_PROJECT_VERSION_MAJOR}.${CMAKE_PROJECT_VERSION
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
 
-option(BUILD_TESTS "Build tests" OFF)
-#option(BUILD_SHARED_LIBS "Specifies the type of libraries (SHARED or STATIC) to build" ON)
-
+include(cmake/options.cmake)
 include(cmake/dependencies.cmake)
 
 add_subdirectory(src)
