refactor: libraries compiled with version suffix

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,18 +2,14 @@ cmake_minimum_required(VERSION 3.21)
 
 include(cmake/polices.cmake)
 
-project(TLCT LANGUAGES CXX)
-
-set(CMAKE_PROJECT_VERSION_MAJOR 0)
-set(CMAKE_PROJECT_VERSION_MINOR 1)
-set(CMAKE_PROJECT_VERSION_PATCH 0)
-set(CMAKE_PROJECT_VERSION ${CMAKE_PROJECT_VERSION_MAJOR}.${CMAKE_PROJECT_VERSION_MINOR}.${CMAKE_PROJECT_VERSION_PATCH})
+project(TLCT VERSION 0.1.0 LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
 
 include(cmake/options.cmake)
 include(cmake/dependencies.cmake)
+include(cmake/helper.cmake)
 
 add_subdirectory(src)
 if (BUILD_TESTS)
