--- a/src/lib/CMakeLists.txt
+++ b/src/lib/CMakeLists.txt
@@ -1,23 +1,29 @@
 if (TLCT_HEADER_ONLY)
-    set(TLCT_LIBRARY_TYPE "INTERFACE")
-    set(TLCT_LIBRARY_DEP_SCOPE "INTERFACE")
+    set(TLCT_LIB_TYPE "INTERFACE")
+    set(TLCT_LIB_DEP_SCOPE "INTERFACE")
 else ()
     if (TLCT_BUILD_SHARED_LIBS)
-        set(TLCT_LIBRARY_TYPE "SHARED")
-        set(TLCT_LIBRARY_COMPILE_DEFS "_TLCT_BUILD_LIBS")
+        set(TLCT_LIB_TYPE "SHARED")
+        set(TLCT_LIB_COMPILE_DEFS "_TLCT_BUILD_LIBS")
     else ()
-        set(TLCT_LIBRARY_TYPE "STATIC")
+        set(TLCT_LIB_TYPE "STATIC")
     endif ()
-    set(TLCT_LIBRARY_DEP_SCOPE "PUBLIC")
-    set(TLCT_LIBRARY_SRCS "lib.cpp")
+    set(TLCT_LIB_DEP_SCOPE "PUBLIC")
+    set(TLCT_LIB_SRCS "lib.cpp")
 endif ()
 
-add_library(tlct ${TLCT_LIBRARY_TYPE} ${TLCT_LIBRARY_SRCS})
-target_compile_definitions(tlct PRIVATE ${TLCT_LIBRARY_COMPILE_DEFS})
-target_include_directories(tlct ${TLCT_LIBRARY_DEP_SCOPE}
+set(TLCT_LIB_NAME tlct)
+add_library(${TLCT_LIB_NAME} ${TLCT_LIB_TYPE} ${TLCT_LIB_SRCS})
+set_target_properties(${TLCT_LIB_NAME} PROPERTIES
+        VERSION ${TLCT_VERSION}
+        SOVERSION ${TLCT_VERSION}
+        DEBUG_POSTFIX "-${TLCT_VERSION}d"
+        RELEASE_POSTFIX "-${TLCT_VERSION}")
+target_compile_definitions(${TLCT_LIB_NAME} PRIVATE ${TLCT_LIB_COMPILE_DEFS})
+target_include_directories(${TLCT_LIB_NAME} ${TLCT_LIB_DEP_SCOPE}
         ${OpenCV_INCLUDE_DIR}
         "${pugixml_SOURCE_DIR}/src"
         "${CMAKE_SOURCE_DIR}/src/include")
-target_link_libraries(tlct ${TLCT_LIBRARY_DEP_SCOPE}
+target_link_libraries(${TLCT_LIB_NAME} ${TLCT_LIB_DEP_SCOPE}
         ${OpenCV_LIBS}
         pugixml)
