--- a/src/include/tlct/common/cmake.h.in
+++ b/src/include/tlct/common/cmake.h.in
@@ -1,2 +1,7 @@
 #cmakedefine TLCT_HEADER_ONLY
 #cmakedefine TLCT_BUILD_SHARED_LIBS
+
+#cmakedefine TLCT_VERSION_MAJOR @TLCT_VERSION_MAJOR@
+#cmakedefine TLCT_VERSION_MINOR @TLCT_VERSION_MINOR@
+#cmakedefine TLCT_VERSION_PATCH @TLCT_VERSION_PATCH@
+#cmakedefine TLCT_VERSION "@TLCT_VERSION@"
