chore: set per-target compile feature `cxx20`

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,5 +1,6 @@
 function(tlct_add_test name srcs)
     add_executable(${name} ${srcs})
+    target_compile_features(${name} PRIVATE cxx_std_20)
     target_link_libraries(${name} PRIVATE tlct GTest::gtest_main)
     copy_dlls_if_needed(${name})
     gtest_discover_tests(${name})
