--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -6,7 +6,7 @@ function(tlct_add_test name srcs)
     gtest_discover_tests(${name})
 endfunction()
 
+tlct_add_test(test_common_config "test_common_config.cpp")
 tlct_add_test(test_tspc_config "test_tspc_config.cpp")
-tlct_add_test(test_tspc_newconfig "test_tspc_newconfig.cpp")
 tlct_add_test(test_raytrix_config "test_raytrix_config.cpp")
 tlct_add_test(test_tspc_patchsizes "test_tspc_patchsizes.cpp")
