test: add test for TSPC

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,13 +2,13 @@ cmake_minimum_required(VERSION 3.21)
 
 include(cmake/policies.cmake)
 
-project(TLCT VERSION 0.3.0 LANGUAGES CXX)
+project(TLCT VERSION 0.3.1 LANGUAGES CXX)
 
 include(cmake/options.cmake)
 include(cmake/dependencies.cmake)
 include(cmake/helper.cmake)
 
 add_subdirectory(src)
-if (BUILD_TESTS)
+if (TLCT_BUILD_TESTS)
     add_subdirectory(tests)
 endif ()
