--- a/src/include/tlct/common/cmake.h.in
+++ b/src/include/tlct/common/cmake.h.in
@@ -7,3 +7,5 @@
 #cmakedefine TLCT_VERSION_MINOR @TLCT_VERSION_MINOR@
 #cmakedefine TLCT_VERSION_PATCH @TLCT_VERSION_PATCH@
 #cmakedefine TLCT_VERSION "@TLCT_VERSION@"
+
+#cmakedefine TLCT_TESTDATA_DIR "@TLCT_TESTDATA_DIR@"
