--- a/src/bin/CMakeLists.txt
+++ b/src/bin/CMakeLists.txt
@@ -8,3 +8,4 @@ endfunction()
 tlct_add_executable(dbg_patchsizes "dbg_patchsizes.cpp")
 tlct_add_executable(dbg_mv "dbg_mv.cpp")
 tlct_add_executable(dbg_draw "dbg_draw.cpp")
+tlct_add_executable(dbg_expdraw "dbg_expdraw.cpp")
