feat: avoid lib users to build debug-only bin

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.21)
 
 include(cmake/policies.cmake)
 
-project(TLCT VERSION 0.10.1 LANGUAGES CXX)
+project(TLCT VERSION 0.10.2 LANGUAGES CXX)
 
 include(cmake/options.cmake)
 include(cmake/dependencies.cmake)
@@ -10,5 +10,5 @@ include(cmake/helper.cmake)
 
 add_subdirectory(src)
 if (TLCT_BUILD_TESTS)
-    add_subdirectory(tests)
+    add_subdirectory(tests EXCLUDE_FROM_ALL)
 endif ()
