--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,5 +1,5 @@
 function(tlct_add_test name srcs)
-    add_executable(${name} ${srcs})
+    add_executable(${name} EXCLUDE_FROM_ALL ${srcs})
     target_link_libraries(${name} PRIVATE tlct GTest::gtest_main)
     copy_dlls_if_needed(${name})
     gtest_discover_tests(${name})
