feat: add inspector

--- a/src/include/tlct/common/cmake.h.in
+++ b/src/include/tlct/common/cmake.h.in
@@ -2,6 +2,7 @@
 
 #cmakedefine TLCT_HEADER_ONLY
 #cmakedefine TLCT_BUILD_SHARED_LIBS
+#cmakedefine TLCT_ENABLE_INSPECT
 
 #cmakedefine TLCT_VERSION_MAJOR @TLCT_VERSION_MAJOR@
 #cmakedefine TLCT_VERSION_MINOR @TLCT_VERSION_MINOR@
