feat: move wrapper and neighbors to common helper

--- a/src/bin/CMakeLists.txt
+++ b/src/bin/CMakeLists.txt
@@ -6,5 +6,6 @@ endfunction()
 
 tlct_add_executable(dbg_mv "dbg_mv.cpp")
 tlct_add_executable(dbg_draw "dbg_draw.cpp")
+tlct_add_executable(dbg_draw_raytrix "dbg_draw_raytrix.cpp")
 tlct_add_executable(dbg_psize "dbg_psize.cpp")
 tlct_add_executable(get_center "get_center.cpp")
