feat: build OpenCV from source

--- a/src/bin/CMakeLists.txt
+++ b/src/bin/CMakeLists.txt
@@ -1,6 +1,13 @@
 function(tlct_add_executable name srcs)
     add_executable(${name} ${srcs})
     target_link_libraries(${name} PRIVATE tlct)
+
+    if (TLCT_ENABLE_LTO)
+        set_target_properties(${name} PROPERTIES
+                INTERPROCEDURAL_OPTIMIZATION ON
+        )
+    endif ()
+
     copy_dlls_if_needed(${name})
 endfunction()
 
