--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,3 +12,5 @@ add_subdirectory(src)
 if (TLCT_BUILD_TESTS)
     add_subdirectory(tests EXCLUDE_FROM_ALL)
 endif ()
+
+include(cmake/install.cmake)
