chore: do not link with debug CRT

--- a/src/lib/CMakeLists.txt
+++ b/src/lib/CMakeLists.txt
@@ -22,13 +22,16 @@ set_target_properties(${TLCT_LIB_NAME} PROPERTIES
         VERSION ${TLCT_VERSION}
         SOVERSION ${TLCT_VERSION}
         DEBUG_POSTFIX "-${TLCT_VERSION}d"
-        RELEASE_POSTFIX "-${TLCT_VERSION}")
+        RELEASE_POSTFIX "-${TLCT_VERSION}"
+)
 target_compile_features(${TLCT_LIB_NAME} ${TLCT_LIB_DEP_SCOPE} cxx_std_20)
 target_compile_definitions(${TLCT_LIB_NAME} PRIVATE ${TLCT_LIB_COMPILE_DEFS})
 target_include_directories(${TLCT_LIB_NAME} ${TLCT_LIB_DEP_SCOPE}
-        ${OpenCV_INCLUDE_DIR}
+        "${PROJECT_SOURCE_DIR}/src/include"
+        ${OpenCV_INCLUDE_DIRS}
         "${pugixml_SOURCE_DIR}/src"
-        "${PROJECT_SOURCE_DIR}/src/include")
+)
 target_link_libraries(${TLCT_LIB_NAME} ${TLCT_LIB_DEP_SCOPE}
         ${OpenCV_LIBS}
-        $<$<NOT:$<BOOL:${PUGIXML_HEADER_ONLY}>>:pugixml>)
+        $<$<NOT:$<BOOL:${PUGIXML_HEADER_ONLY}>>:pugixml>
+)
