--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,8 +1,9 @@
+enable_testing()
+
 function(tlct_add_test name srcs)
     add_executable(${name} EXCLUDE_FROM_ALL ${srcs})
-    target_link_libraries(${name} PRIVATE tlct GTest::gtest_main)
+    target_link_libraries(${name} PRIVATE tlct doctest)
     copy_dlls_if_needed(${name})
-    gtest_discover_tests(${name})
 endfunction()
 
 tlct_add_test(test_common_cfg "test_common_cfg.cpp")
