--- a/src/bin/CMakeLists.txt
+++ b/src/bin/CMakeLists.txt
@@ -1,6 +1,7 @@
 function(tlct_add_executable name srcs)
     add_executable(${name} ${srcs})
-    target_link_libraries(${name} PRIVATE tlct)
+    target_link_libraries(${name} PRIVATE tlct argparse)
+    target_include_directories(${name} PRIVATE ${argparse_SOURCE_DIR}/include)
 
     if (TLCT_ENABLE_LTO)
         set_target_properties(${name} PROPERTIES
@@ -12,10 +13,9 @@ function(tlct_add_executable name srcs)
     copy_dlls_if_needed(${name})
 endfunction()
 
-tlct_add_executable(dbg_mv "dbg_mv.cpp")
+tlct_add_executable(RLC40 "dbg_mv.cpp")
 tlct_add_executable(dbg_draw "dbg_draw.cpp")
 tlct_add_executable(dbg_psize "dbg_psize.cpp")
-tlct_add_executable(dbg_mv_raytrix "dbg_mv_raytrix.cpp")
 tlct_add_executable(dbg_draw_raytrix "dbg_draw_raytrix.cpp")
 tlct_add_executable(dbg_psize_raytrix "dbg_psize_raytrix.cpp")
 
