--- a/src/bin/CMakeLists.txt
+++ b/src/bin/CMakeLists.txt
@@ -13,7 +13,9 @@ function(tlct_add_executable name srcs)
     copy_dlls_if_needed(${name})
 endfunction()
 
-tlct_add_executable(RLC40 "dbg_mv.cpp")
+tlct_add_executable(RLC40 "RLC40.cpp")
+tlct_add_executable(RLC40-inspect "RLC40-inspect.cpp")
+
 tlct_add_executable(dbg_draw "dbg_draw.cpp")
 tlct_add_executable(dbg_psize "dbg_psize.cpp")
 tlct_add_executable(dbg_draw_raytrix "dbg_draw_raytrix.cpp")
