chore: update desc

--- a/src/include/tlct/common/cmake.h.in
+++ b/src/include/tlct/common/cmake.h.in
@@ -8,6 +8,6 @@
 #cmakedefine TLCT_VERSION_MINOR @TLCT_VERSION_MINOR@
 #cmakedefine TLCT_VERSION_PATCH @TLCT_VERSION_PATCH@
 #cmakedefine TLCT_GIT_TAG "@TLCT_GIT_TAG@"
-#cmakedefine TLCT_EPILOG "@TLCT_EPILOG@"
+#cmakedefine TLCT_COMPILE_INFO "@TLCT_COMPILE_INFO@"
 
 #cmakedefine TLCT_TESTDATA_DIR "@TLCT_TESTDATA_DIR@"
