--- a/src/bin/CMakeLists.txt
+++ b/src/bin/CMakeLists.txt
@@ -1,6 +1,6 @@
 function(tlct_add_executable name srcs)
     add_executable(${name} ${srcs})
-    target_link_libraries(${name} PRIVATE tlct argparse)
+    target_link_libraries(${name} PRIVATE argparse tlct::lib)
     target_include_directories(${name} PRIVATE ${argparse_SOURCE_DIR}/include)
     target_compile_definitions(${name} PRIVATE $<$<CXX_COMPILER_ID:MSVC>:_CRT_SECURE_NO_WARNINGS>)
 
@@ -14,6 +14,8 @@ function(tlct_add_executable name srcs)
     copy_dlls_if_needed(${name})
 endfunction()
 
-tlct_add_executable(RLC40 "RLC40.cpp")
 tlct_add_executable(dbg_draw "dbg_draw.cpp")
 tlct_add_executable(get_center "get_center.cpp")
+
+tlct_add_executable(tlct "main.cpp")
+add_executable(tlct::bin ALIAS tlct)
