--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -2,7 +2,7 @@ enable_testing()
 
 function(tlct_add_test name srcs)
     add_executable(${name} EXCLUDE_FROM_ALL ${srcs})
-    target_link_libraries(${name} PRIVATE tlct doctest)
+    target_link_libraries(${name} PRIVATE doctest tlct::lib)
     target_compile_definitions(${name} PRIVATE $<$<CXX_COMPILER_ID:MSVC>:_CRT_SECURE_NO_WARNINGS>)
 
     copy_dlls_if_needed(${name})
