--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,7 +1,7 @@
 enable_testing()
 
 function(tlct_add_test name srcs)
-    add_executable(${name} EXCLUDE_FROM_ALL ${srcs})
+    add_executable(${name} ${srcs})
     target_link_libraries(${name} PRIVATE doctest tlct::lib)
     target_compile_definitions(${name} PRIVATE $<$<CXX_COMPILER_ID:MSVC>:_CRT_SECURE_NO_WARNINGS>)
 
