--- a/src/lib/CMakeLists.txt
+++ b/src/lib/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(TLCT_LIB_NAME tlc)
+set(TLCT_LIB_NAME tlct-lib)
 
 if (TLCT_HEADER_ONLY)
     set(TLCT_LIB_TYPE "INTERFACE")
@@ -17,16 +17,18 @@ endif ()
 add_library(${TLCT_LIB_NAME} ${TLCT_LIB_TYPE} ${TLCT_LIB_SRCS})
 add_library(tlct::lib ALIAS ${TLCT_LIB_NAME})
 set_target_properties(${TLCT_LIB_NAME} PROPERTIES
-        VERSION ${TLCT_VERSION}
-        SOVERSION ${TLCT_VERSION_MAJOR}.${TLCT_VERSION_MINOR}
-        DEBUG_POSTFIX "-${TLCT_VERSION}d"
-        RELEASE_POSTFIX "-${TLCT_VERSION}"
+        OUTPUT_NAME ${PROJECT_NAME}
+        VERSION ${PROJECT_VERSION}
+        SOVERSION ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
+        DEBUG_POSTFIX "-${PROJECT_VERSION}d"
+        RELEASE_POSTFIX "-${PROJECT_VERSION}"
 )
 target_compile_features(${TLCT_LIB_NAME} ${TLCT_LIB_DEP_SCOPE} cxx_std_20)
 target_include_directories(${TLCT_LIB_NAME} ${TLCT_LIB_DEP_SCOPE}
-        "${PROJECT_SOURCE_DIR}/src/include"
-        ${OpenCV_INCLUDE_DIRS}
-        "${pugixml_SOURCE_DIR}/src"
+        $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/src/include>
+        $<INSTALL_INTERFACE:include>
+        $<BUILD_INTERFACE:${OpenCV_INCLUDE_DIRS}>
+        $<BUILD_INTERFACE:${pugixml_SOURCE_DIR}/src>
 )
 target_link_libraries(${TLCT_LIB_NAME} ${TLCT_LIB_DEP_SCOPE}
         ${OpenCV_LIBS}
