--- a/src/bin/CMakeLists.txt
+++ b/src/bin/CMakeLists.txt
@@ -1,7 +1,9 @@
 function(tlct_add_executable name srcs)
     add_executable(${name} ${srcs})
     target_link_libraries(${name} PRIVATE argparse tlct::lib)
-    target_include_directories(${name} PRIVATE ${argparse_SOURCE_DIR}/include)
+    target_include_directories(${name} PRIVATE
+            $<BUILD_INTERFACE:${argparse_SOURCE_DIR}/include>
+    )
     target_compile_definitions(${name} PRIVATE $<$<CXX_COMPILER_ID:MSVC>:_CRT_SECURE_NO_WARNINGS>)
 
     if (TLCT_ENABLE_LTO)
@@ -14,7 +16,10 @@ function(tlct_add_executable name srcs)
     copy_dlls_if_needed(${name})
 endfunction()
 
-tlct_add_executable(tlct "main.cpp")
-add_executable(tlct::bin ALIAS tlct)
+tlct_add_executable(tlct-bin "main.cpp")
+set_target_properties(tlct-bin PROPERTIES
+        OUTPUT_NAME ${PROJECT_NAME}
+)
+add_executable(tlct::bin ALIAS tlct-bin)
 
 # tlct_add_executable(dbg_draw "dbg_draw.cpp")
