--- a/src/include/tlct/common/cmake.h.in
+++ b/src/include/tlct/common/cmake.h.in
@@ -4,10 +4,10 @@
 #cmakedefine TLCT_BUILD_SHARED_LIBS
 #cmakedefine PUGIXML_HEADER_ONLY
 
-#cmakedefine TLCT_VERSION_MAJOR @TLCT_VERSION_MAJOR@
-#cmakedefine TLCT_VERSION_MINOR @TLCT_VERSION_MINOR@
-#cmakedefine TLCT_VERSION_PATCH @TLCT_VERSION_PATCH@
-#cmakedefine TLCT_VERSION "@TLCT_VERSION@"
+#cmakedefine tlct_VERSION_MAJOR @tlct_VERSION_MAJOR@
+#cmakedefine tlct_VERSION_MINOR @tlct_VERSION_MINOR@
+#cmakedefine tlct_VERSION_PATCH @tlct_VERSION_PATCH@
+#cmakedefine tlct_VERSION "@tlct_VERSION@"
 #cmakedefine TLCT_COMPILE_INFO "@TLCT_COMPILE_INFO@"
 
 #cmakedefine TLCT_TESTDATA_DIR "@TLCT_TESTDATA_DIR@"
