chore: do not specify the build config in CI

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Build
         run: |
           cmake -S . -B build -DTLCT_BUILD_TESTS=ON
-          cmake --build build --config Debug --parallel
+          cmake --build build --parallel
 
       - name: Run tests
         run: |
