perf: populate `std::string_view`

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -9,6 +9,6 @@ function(tlct_add_test name srcs)
     doctest_discover_tests(${name})
 endfunction()
 
-tlct_add_test(test_static_math "test_static_math.cpp")
-tlct_add_test(test_common_cfg "test_common_cfg.cpp")
-tlct_add_test(test_tspc_cfg "test_tspc_cfg.cpp")
+tlct_add_test(test_constexpr_math "test_constexpr_math.cpp")
+tlct_add_test(test_config_map "test_config_map.cpp")
+tlct_add_test(test_tspc_config "test_tspc_config.cpp")
