chore: use cached opencv in CI

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,7 +1,7 @@
 FROM mcr.microsoft.com/devcontainers/cpp
 
-COPY ./.devcontainer/install_opencv.sh /tmp/
+COPY ./.devcontainer/install-opencv.sh /tmp/
 
-ARG OCV_VERSION=4.10.0
+ARG OPENCV_VERSION=4.10.0
 
-RUN chmod +x /tmp/install-opencv.sh && /tmp/install-opencv.sh $OCV_VERSION && rm /tmp/install-opencv.sh
+RUN chmod +x /tmp/install-opencv.sh && /tmp/install-opencv.sh $OPENCV_VERSION && rm /tmp/install-opencv.sh
