--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -26,7 +26,7 @@ jobs:
         uses: actions/cache@v4
         with:
           path: /tmp/opencv-install
-          key: ${{ runner.os }}-$OPENCV_VERSION
+          key: ${{ runner.os }}-${{ env.OPENCV_VERSION }}
 
       - name: Build OpenCV
         if: steps.opencv-cache.outputs.cache-hit != 'true'
