--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -6,6 +6,14 @@ on:
     paths:
       - "src/**"
       - "tests/**"
+      - "CMakeLists.txt"
+      - ".github/workflows/CI.yml"
+  push:
+    branches: [ master ]
+    paths:
+      - "src/**"
+      - "tests/**"
+      - "CMakeLists.txt"
       - ".github/workflows/CI.yml"
   workflow_dispatch:
 
